--- a/.air.toml
+++ b/.air.toml
@@ -9,7 +9,7 @@ tmp_dir = "tmp"
   delay = 0
   exclude_dir = ["assets", "tmp", "vendor", "testdata", "node_modules", ".yalc"]
   exclude_file = ["yalc.lock"]
-  exclude_regex = ["_test.go"]
+  exclude_regex = ["_test.go", ".null-ls"]
   exclude_unchanged = false
   follow_symlink = false
   full_bin = ""
