--- a/.air.toml
+++ b/.air.toml
@@ -13,7 +13,7 @@ tmp_dir = "tmp"
   exclude_unchanged = false
   follow_symlink = false
   full_bin = ""
-  include_dir = ["resources/views", "app", "routes"]
+  include_dir = ["resources/views", "app", "routes", "config"]
   include_ext = ["go", "tpl", "tmpl", "html"]
   include_file = ["main.go"]
   kill_delay = "0s"
