--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build --config vite.config.ts && vite build --config vite.ssr.config.ts",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "type-check": "tsc --incremental --pretty --noEmit",
     "preview": "vite preview"
   },
   "dependencies": {
