--- a/package.json
+++ b/package.json
@@ -20,20 +20,20 @@
     "refiber-vite-plugin": "^1.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.6",
     "@types/node": "^20.11.30",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react-swc": "^3.5.0",
-    "autoprefixer": "^10.4.18",
     "clsx": "^2.1.0",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.35",
     "tailwind-merge": "^2.2.2",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.1.6",
     "typescript": "^5.2.2",
     "vite": "^5.1.7"
   }
