--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@inertiajs/react": "^1.0.15",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.12",
+    "@tailwindcss/vite": "^4.1.6",
     "core-js": "^3.38.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,7 +22,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.6",
-    "@types/node": "^20.11.30",
+    "@types/node": "^20.17.46",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
