--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   },
   "dependencies": {
     "@inertiajs/react": "^1.0.15",
+    "@radix-ui/react-slot": "^1.2.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.12",
     "@tailwindcss/vite": "^4.1.6",
+    "class-variance-authority": "^0.7.1",
     "core-js": "^3.38.0",
+    "lucide-react": "^0.509.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "refiber-vite-plugin": "^1.0.0"
@@ -28,13 +31,14 @@
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react-swc": "^3.5.0",
-    "clsx": "^2.1.0",
+    "clsx": "^2.1.1",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.35",
-    "tailwind-merge": "^2.2.2",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "^4.1.6",
+    "tw-animate-css": "^1.2.9",
     "typescript": "^5.2.2",
     "vite": "^5.1.7"
   }
