--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
     "class-variance-authority": "^0.7.1",
     "core-js": "^3.38.0",
     "lucide-react": "^0.509.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "refiber-vite-plugin": "^1.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.6",
     "@types/node": "^20.17.46",
-    "@types/react": "^18.2.56",
-    "@types/react-dom": "^18.2.19",
+    "@types/react": "19.1.3",
+    "@types/react-dom": "19.1.3",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react-swc": "^3.5.0",
